<resources>
    <string name="app_name">FamilyMap</string>
    <string name="user_name_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="server_host_text">Server Host:</string>
    <string name="server_port_text">Server Port:</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="fields_empty">ALL FIELDS MUST BE FILLED IN!</string>
    <string name="login_failure">Failed to login!</string>
    <string name="data_sync_error">There was a problem with syncing the data.</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string-array name="colors_array">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    <string-array name="map_types_array">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
</resources>
